--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,34 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
-mysqlclient = "*"
-mysql-connector-python = "*"
+asgiref==3.6.0
+certifi==2023.5.7
+charset-normalizer==3.1.0
+colorama==0.4.6
+crispy-bootstrap4==2022.1
+defusedxml==0.7.1
+Django==4.1.7
+django-crispy-forms==2.0
+djangorestframework==3.14.0
+httpie==3.2.2
+idna==3.4
+markdown-it-py==3.0.0
+mdurl==0.1.2
+multidict==6.0.4
+mysql-connector-python==8.0.32
+mysqlclient==2.1.1
+protobuf==3.20.3
+psycopg2==2.9.6
+Pygments==2.15.1
+PySocks==1.7.1
+pytz==2023.3
+requests==2.31.0
+requests-toolbelt==1.0.0
+rich==13.4.2
+sqlparse==0.4.3
+tzdata==2022.7
+urllib3==2.0.3
+
 
 [dev-packages]
 
